Finish the project with tests

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node ./appJS/src/index.js",
     "compile": "rm -Rf ./app/javascript && node ./node_modules/.bin/tsc",
     "lint": "node ./node_modules/tslint/bin/tslint --project ./tsconfig.json --config \"./tslint.yaml\" \"app/**/*.ts\" --format verbose",
-    "test": "jest ./appJS/test",
+    "test": "export ldAppBeeBuzziness=true && jest ./appJS/test",
     "watch:compile": "rm -Rf ./app/javascript && node ./node_modules/typescript/bin/tsc --watch",
     "watch:lint": "node ./node_modules/chokidar-cli/index.js 'app/**/*.ts' -c \"npm run lint\" --initial --verbose",
     "watch:test": "jest --watchAll ./appJS/test",
